# swe-backend

./: .env  main.py
database/: baseTypes.py  database.py  models.py
scp_api/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
scp_api/app/: main.py
scp_api/app/api/: deps.py
scp_api/app/api/routers/: __init__.py  auth.py  chats.py  complaints.py  consumers.py  links.py  notifications.py  orders.py  products.py  suppliers.py  users.py
scp_api/app/core/: config.py  logging.py  security.py
scp_api/app/db/: base.py  session.py
scp_api/app/db/migrations/: env.py
scp_api/app/db/migrations/versions/: 000000000001_init.py  0001_init.py  0002_initial_models.py
scp_api/app/models/: __init__.py  chat.py  enums.py  link.py  notification.py  order.py  product.py  user.py
scp_api/app/schemas/: chat.py  error.py  link.py  notification.py  order.py  product.py  user.py
scp_api/app/scripts/: seed.py
scp_api/app/services/: auth_service.py  chat_service.py  complaint_service.py  link_service.py  notification_service.py  order_service.py  product_service.py
scp_api/app/utils/: hashing.py  pagination.py
scp_api/tests/: conftest.py  test_errors.py  test_health.py  test_models.py  test_security.py
